--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ body {
   align-items: center;
   gap: 24px;
   padding: 64px 24px 24px 24px;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
 }
 
 #greeting {
